# device-bluetooth-c

./: CMakeLists.txt  Makefile  README.md  attribution.txt  docker-ble-policy
cmake/: FindLibcsdk.cmake  FindLibdbus.cmake
profiles/: cc2650.yaml
res/: configuration.toml
scripts/: Dockerfile.alpine-3.9  build.sh  build_deps.sh
src/c/: ble.c  ble.h  bluetooth.c  bluetooth.h  cc2650.c  cc2650.h  conversion.c  conversion.h  main.c
